Update-1 index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ photography-portfolio.html
    - 將此檔案命名為 index.html。
    - 將整個資料夾（或僅此檔案）推上 GitHub repository，並啟用 GitHub Pages（branch: main / root）。
    - 若要替換照片：搜尋檔案內 data-src 或直接替換 <img src="..."> 的網址為你的圖檔路徑（建議放到 /images/ 下），建議上傳多尺寸版本以利載入效率。
-3) 調整文字：搜尋 <!-- EDIT --> 標記位置做個人化修改（姓名、簡介、社群連結等）。
+3) 調整文字：搜尋 <!-- EDIT -- >標記位置做個人化修改（姓名、簡介、社群連結等）。
 4) 本範例使用外部圖檔作示範（Unsplash），上線時建議改為你自己的靜態圖檔或優化過的縮圖。
 
 注意：若想把相片放在子資料夾並保存在 GitHub，請把 <img src="..."> 的路徑改為相對路徑 (例如 images/gallery/photo1.jpg)。
@@ -18,7 +18,7 @@ photography-portfolio.html
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>攝影師作品集｜你的名字</title>
+  <title>攝影師作品集｜一森</title>
   <meta name="description" content="攝影師作品集 — 展示婚禮、人像、風景等攝影作品。">
   <link rel="icon" href="data:;base64,iVBORw0KGgo="> <!-- 空白favicon，可替換 -->
   <style>
@@ -205,7 +205,7 @@ photography-portfolio.html
         <div class="profile">
           <h3>關於我</h3>
           <p><!-- EDIT: 簡短自我介紹 -->
-            你好，我是你的名字，一位專注於婚禮與人像的攝影師。我喜歡以自然光捕捉真實情緒，並透過構圖講述每個故事。
+            你好，我是一森，一位專注於婚禮與人像的攝影師。我喜歡以自然光捕捉真實情緒，並透過構圖講述每個故事。
           </p>
           <p style="color:var(--muted);margin-top:6px">服務項目：婚禮攝影 / 個人寫真 / 商業攝影</p>
 
