--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ photography-portfolio.html
 
           <div class="socials">
             <!-- EDIT: 填入你的社群或聯絡方式 -->
-            <a href="#https://www.instagram.com/eason.t25/">Instagram</a>
+            <a href="https://www.instagram.com/eason.t25/">Instagram</a>
             <a href="#">Facebook</a>
             <a href="#">Email</a>
           </div>
